# tracker-watcher

./: .gitignore  main.py  pyproject.toml
app/: config.py  dependencies.py  main.py
app/database/: database.py
app/models/: models.py
app/routers/: users.py  watchers.py
app/scheduler/: __init__.py
app/schemas/: users.py  watchers.py
app/services/: users.py  watchers.py
app/services/alerts/: base.py  helper_functions.py  notify_dev_terminal.py  orchestrator.py
app/services/fetcher/: base.py  fetch_price_steam.py
